<resources>
    <string name="app_name">Ventra Check</string>
    <string name="title_activity_card_check">Check Ventra Card</string>

    <string name="title_section1">My Cards</string>
    <string name="title_section2">Manage cards</string>
    <string name="title_section3">Check new card</string>

    <!--string name="transitAccountId">Account ID: </string-->
    <string name="accountStatusValue">No Account</string>
    <string name="riderClassDescriptionValue">No Fare</string>
    <string name="partialMediaSerialNbrValue">Card ending in xxxx</string>

    <string name="total_balance">Your total balance: </string>
    <string name="passes">No pass on this card </string>
    <string name="remainingRidesValue">No rides remaining.</string>
    <string name="data_refresh">Last updated: </string>
    <string name="total_passes">Your pass: </string>

    <string name="add_card_button">Add Card</string>
    <string name="remove_card_button">Remove Card</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Refresh</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_manage_cards">ManageCardsActivity</string>

    <string name="no_card">No card registered</string>
    <string name="add_card">Add a new card by clicking "Check new card" in the drawer menu</string>

    <string name="low_balance">Low balance on Ventra!</string>
    <string name="pass_expiry">Ventra pass about to expire!</string>
    <string name="card_status">Card data updated</string>
    <string name="connection_error">Internet connection unavailable!</string>


</resources>
